--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 id="logo"> Love Running </h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"> 
+        <label for="nav-toggle" class="nav-toggle-label">
             <i class="fa-solid fa-bars"></i>
         </label>
 
@@ -39,12 +39,40 @@
     </header>
 
     <!-- Main Content -->
-    <main> 
+    <main>
         <section id="hero">
-           <div id="cover-text">
-            <h2> Love Running </h2>
-            <h3> Dublin Docklands & Phoenix Park </h3>
-           </div>
+            <div id="cover-text">
+                <h2> Love Running </h2>
+                <h3> Dublin Docklands & Phoenix Park </h3>
+            </div>
+        </section>
+        <section id="reasons">
+            <h2> Why love running with us? </h2>
+            <div id="benefits">
+                <div id="benefits-physical">
+                    <div>
+                        <h3>Feel Healthy <i class="fa-solid fa-heartbeat"></i></h3>
+                        <hr>
+                        <p> Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength. </p>
+                    </div>
+                    <div>
+                        <h3>Feel Strong <i class="fa-solid fa-dumbbell"></i></h3>
+                        <hr>
+                        <p> Running strengthens your heart by pumping blood more effectively through your body. </p>
+                    </div>
+                    <div id="benefits-mental">
+                        <div>
+                            <h3>Feel Free <i class="fa-brands fa-fly"></i></h3>
+                            <hr>
+                            <p> Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier. </p>
+                        </div>
+                        <div>
+                            <h3>Get Social <i class="fa-solid fa-globe"></i></h3>
+                            <hr>
+                            <p> When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, and inspire you to try new events. </p>
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
 
@@ -52,16 +80,20 @@
     <footer>
         <ul id="social-networks">
             <li> <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fa-brands fa-facebook"></i> </a> </li>
+                    aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fa-brands fa-facebook"></i>
+                </a> </li>
 
-                    <li> <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens in a new tab)"> <i class="fa-brands fa-twitter"></i> </a> </li>
+            <li> <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"> <i class="fa-brands fa-twitter"></i> </a>
+            </li>
 
-                        <li> <a href="https://www.YouTube.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our YouTube channel (opens in a new tab)"> <i class="fa-brands fa-youtube"></i></i> </a> </li>
+            <li> <a href="https://www.YouTube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube channel (opens in a new tab)"> <i
+                        class="fa-brands fa-youtube"></i></i> </a> </li>
 
-                            <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                                aria-label="Visit our Instagram page (opens in a new tab)"> <i class="fa-brands fa-instagram"></i> </a> </li>
+            <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"> <i class="fa-brands fa-instagram"></i>
+                </a> </li>
         </ul>
     </footer>
 
