--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description"
@@ -25,10 +26,10 @@
             <h1 id="logo"> Love Running </h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"> 
+        <label for="nav-toggle" class="nav-toggle-label">
             <i class="fa-solid fa-bars"></i>
         </label>
-        
+
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
@@ -39,22 +40,42 @@
     </header>
 
     <!-- Main Content -->
-    <main> Main Content </main>
+    <main>
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/images/athletes.webp" alt="Two athletes running together">
+                <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
+                <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
+                <img src="assets/images/man.webp" alt="Man at charity paint running festival">
+                <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+                <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
+                <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
+                <img src="assets/images/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/images/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
             <li> <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fa-brands fa-facebook"></i> </a> </li>
+                    aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fa-brands fa-facebook"></i>
+                </a> </li>
 
-                    <li> <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens in a new tab)"> <i class="fa-brands fa-twitter"></i> </a> </li>
+            <li> <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"> <i class="fa-brands fa-twitter"></i> </a>
+            </li>
 
-                        <li> <a href="https://www.YouTube.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our YouTube channel (opens in a new tab)"> <i class="fa-brands fa-youtube"></i></i> </a> </li>
+            <li> <a href="https://www.YouTube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube channel (opens in a new tab)"> <i
+                        class="fa-brands fa-youtube"></i></i> </a> </li>
 
-                            <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                                aria-label="Visit our Instagram page (opens in a new tab)"> <i class="fa-brands fa-instagram"></i> </a> </li>
+            <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"> <i class="fa-brands fa-instagram"></i>
+                </a> </li>
         </ul>
     </footer>
 
