--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description"
@@ -31,9 +32,9 @@
 
         <nav>
             <ul id="menu">
-                <li> <a href="" class="active"> Home </a> </li>
-                <li> <a href=""> Gallery </a> </li>
-                <li> <a href=""> Sign Up </a> </li>
+                <li> <a href="index.html" class="active"> Home </a> </li>
+                <li> <a href="gallery.html"> Gallery </a> </li>
+                <li> <a href="signup.html"> Sign Up </a> </li>
             </ul>
         </nav>
     </header>
