--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <section id="reasons">
             <h2> Why love running with us? </h2>
-            <div id="benefits">
+            <div id="benefits"> </div> 
                 <div id="benefits-physical">
                     <div>
                         <h3>Feel Healthy <i class="fa-solid fa-heartbeat"></i></h3>
@@ -138,7 +138,7 @@
 
             <li> <a href="https://www.YouTube.com/" target="_blank" rel="noopener"
                     aria-label="Visit our YouTube channel (opens in a new tab)"> <i
-                        class="fa-brands fa-youtube"></i></i> </a> </li>
+                        class="fa-brands fa-youtube"></i> </a> </li>
 
             <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)"> <i class="fa-brands fa-instagram"></i>
